# rokujo-collector-scrapy-generic

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  scrapy.cfg
.github/workflows/: ci.yml  docs.yml
docs/source/: conf.py  getting_started.md  index.md  index.rst  introduction.md  spiders.md
docs/source/_static/: custom.css
docs/source/getting_started/: environment.md  install.md  running_spider.md
docs/source/spiders/: ArchiveSpider.md  FeedSpider.md  ReadMoreSpider.md
generic/: items.py  middlewares.py  pipelines.py  runner.py  settings.py  spider_resolver.py  utils.py
generic/mixins/: file_downloader.py  read_more.py
generic/spider_resolvers/: base.py
generic/spiders/: archive_spider.py  base.py  directory.py  feed.py  file_download.py  read_more.py  with_source.py  wordpress.py
tests/: test_spider_resolver.py  test_utils.py
tests/spiders/: test_base.py  test_read_more.py
