[project]
name = "rokujo-collector-scrapy-generic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "extruct>=0.18.0",
    "honcho>=2.0.0",
    "pproxy>=2.7.9",
    "pytest-mock>=3.15.1",
    "reader>=3.21",
    "scrapy>=2.14.0",
    "scrapy-spider-metadata>=0.2.0",
    "scrapy-user-agents>=0.1.1",
    "trafilatura[all]>=2.0.0",
]

[tool.ruff]
line-length = 79


[tool.ruff.lint]
select = ["E", "W", "I"]
