[project]
name = "rokujo-collector-scrapy-generic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "extruct>=0.18.0",
    "feedgen>=1.0.0",
    "pathvalidate>=3.3.1",
    "pikepdf>=10.2.0",
    "pydata-sphinx-theme>=0.16.1",
    "pyyaml>=6.0.3",
    "reader>=3.21",
    "scrapy>=2.14.0",
    "scrapy-spider-metadata>=0.2.0",
    "scrapy-user-agents>=0.1.1",
    "trafilatura[all]>=2.0.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "I"]

[tool.pytest]
strict = true
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "flake8-pytest-style>=2.2.0",
    "honcho>=2.0.0",
    "ipython>=9.9.0",
    "myst-parser>=5.0.0",
    "pproxy>=2.7.9",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.11",
    "sphinx>=9.0.4",
    "sphinx-autodoc2>=0.5.0",
    "sphinxcontrib-mermaid>=2.0.0",
]
